# aoc2024-haskell

./: .gitignore  README.md  aoc2024-haskell.cabal
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Utils.hs
