cabal-version:       2.2

name:                aoc2024-haskell
version:             0.1.0.0
author:              zarhyas
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Utils
                       Day01
                
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable aoc2024-haskell
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , aoc2024-haskell
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
